 # [#24285] Headlinks in header sum up when using progressive/conservative cache
 # [#25403] "Font Size" not working with Internet Explorer 7
 # [#25508] Update CodeMirror to Version 1.0
 # [#22870] Improved fix for XSS issue found in Joomla 1.5.20
 # [#25522] Extra quote in com_weblinks
 # [#25074] Form onchange event pointing to non-existant event
 
02-Apr-2011 Jean-Marie Simonet
 $ Added missing strings

01-Apr-2011 Mark Dexter
 # Fix incorrect comments in articles model

31-Mar-2011 Mark Dexter
 # [#24917] Module latest user parameter link to contact does not work
 # [#25385] Optimize for loops
 # [#25425] Extension "upgrade" method re-installing component
 # [#25496] Database error not handled in mod_users_latest and mod_articles_archive

31-Mar-2011 Jean-Marie Simonet
 # [#25495] *Wrong lang load order when editing plugin
 # Normalizing plugins xml (languages missing). Thanks Bill
 # [#25486] Undefined notice on 404 page

30-Mar-2011 Jean-Marie Simonet
 #$ Adding Bosnian to installation languages
 
29-Mar-2011 Mark Dexter
 # [#25288] Media form field is not allowed access to media manager in the front end
 # [#25129] Media manager popup - Change of directory don't reflect in list of images and folders on windows system (XAMPP)
 # [#24736] Don't always load Mootools (More) in the backend.
 # [#25139] Changing modules doesn't reflect changes with enabled caching.
 # [#25071] onchange event does not fire in JFormFieldAMedia

29-Mar-2011 Jean-Marie Simonet
 # Correcting some components xml
 # Normalizing front-end modules xml (format and sys.ini missing)
 # Normalizing back-end modules xml (languages missing)
 
28-Mar-2011 Jean-Marie Simonet
 # [#25481] *Combined patch for various meta issues in menu items. Thanks Piotr
 
27-Mar-2011 Jean-Marie Simonet
 #$ Adding Azeri to installation languages
 # [#25224] Many places calling JHTML:: instead of JHtml:: Thanks Peter and Bill.